# PyReactSim

./: .gitignore  LICENSE  README.md  pyproject.toml
diagrams/: thermo_source.md
examples/: exp-0.py  exp-1.py  model_source_exp_1.py  reaction-rate-exp-1.py  reaction-rate-exp-2.py  reference.py  reference_2.py  reference_2_liq.py  reference_3.py  reference_template.py  rxn-1.py
examples/batch reactor/: batch-exe-1.py  gas-batch-exe-1.py  gas-batch-exe-2.py  liquid-batch-exe-1.py  liquid-batch-exe-2.py  liquid-batch-exe-3.py  liquid-batch-exe-4.py  liquid_model_source_exp_1.py  model_source_exp_1.py  rate_exp_1.py  rate_exp_2.py  rate_exp_3.py  rate_exp_4.py  rate_exp_5.py  rate_exp_6.py  reaction-rate-exp-2.py  thermo-exp-1.py  thermo_source_exp_1.py
examples/cstr/: gas-cstr-exp-1.py  liquid-cstr-exp-1.py
examples/odes/: exp-1.py  exp-2.py  install-diffeqpy.py
examples/parameters/: exp-batch-1.py
examples/pbr/: gas-pbr-exp-1.py  gas-pbr-exp-2.py  liquid-pbr-exp-1.py  liquid-pbr-exp-2.py  liquid-pbr-exp-3.py
examples/pfr/: gas-pfr-exp-1.py  gas-pfr-exp-2.py  liquid-pfr-exp-1.py  liquid-pfr-exp-2.py  liquid-pfr-exp-3.py
examples/plot/: plot_res.py  plot_xy.py
examples/rates/: esterification_acetic_acid_1.py  esterification_acetic_acid_2.py  methanol_1.py  rate_ABCDE.py  rate_A_B_to_C.py  rate_A_B_to_C_D.py  rate_A_to_B.py  rate_exp_1.py  rate_exp_2.py  rate_exp_3.py  rate_exp_4.py  rate_exp_5.py  rate_exp_6.py  rate_exp_7.py  rate_exp_8.py  rate_exp_8_updated.py  rate_liquid_ABCDE.py  rate_liquid_ABCDE_2.py  rate_liquid_A_to_B.py  reaction-rate-exp-1.py
examples/reaction rates/: reaction-rate-exp-1.py
examples/source/: gas_load_model_source.py  gas_model_source_exp_1.py  liquid_load_model_source.py  liquid_model_source_exp_1.py  model_source_exp_2.py
examples/thermodb/: carbon dioxide.pkl  carbon monoxide.pkl  hydrogen.pkl  methanol.pkl  (+1 more)
pyreactsim/: __init__.py  app.py
(+91 files in other folders)
